--- a/.gitignore
+++ b/.gitignore
@@ -1,24 +1,53 @@
-# Compiled class file
+# Компилированный код Java
 *.class
+target/
+bin/
 
-# Log file
+# Файлы IntelliJ IDEA
+.idea/
+.gigaide/
+*.iml
+*.iws
+*.ipr
+.DS_Store
+
+# Файлы сборки Maven
+mvnw
+mvnw.cmd
+.mvn/wrapper/maven-wrapper.jar
+.mvn/wrapper/maven-wrapper.properties
+
+# Файлы сборки Gradle (если используется Gradle)
+.gradle/
+build/
+settings.gradle.kts
+gradle.properties
+gradlew
+gradlew.bat
+
+# Лог-файлы
 *.log
+logs/
 
-# BlueJ files
-*.ctxt
+# Файлы виртуальной среды (если используются)
+.venv/
+venv/
 
-# Mobile Tools for Java (J2ME)
-.mtj.tmp/
+# Файлы конфигурации, специфичные для локальной разработки (могут содержать пароли!)
+application-local.properties
+application-dev.properties
+*.swp # Файлы подкачки Vim
+*.swo # Файлы подкачки Vim
 
-# Package Files #
-*.jar
-*.war
-*.nar
-*.ear
-*.zip
-*.tar.gz
-*.rar
 
-# virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
+# Прочие временные файлы и директории
+tmp/
+temp/
+out/
+.cache/
+
+# Файлы отладки
 hs_err_pid*
-replay_pid*
+
+# Файлы профилирования
+java_pid*
