Пробую stomp, sockjs, добавил caddy для cors

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,6 @@
 spring.application.name=websocket-spring
+server.port=8080
+server.ssl.key-store=classpath:keystore/keystore.p12
+server.ssl.key-store-password=123456
+server.ssl.key-store-type=PKCS12
+server.ssl.key-alias=springboot
